# bdsh

./: .gitignore  CLAUDE.md  COPYING  Cargo.toml  Makefile  README.md  build.rs  dist-workspace.toml  release.toml
.github/workflows/: release.yml
.tasks/blocked/: 07v1fs60.md  14ft0q0f.md  1nk4awyk.md  45dn6pzp.md  7a0a2txt.md  fg7vd2gz.md  g5038fhj.md  hqxt0dwn.md  neyc99m7.md  s7bsv7kh.md  vyz6nsmn.md
.tasks/closed/: 07v1fs60.md  137fkdy1.md  14ft0q0f.md  3132nkry.md  31n7nrrq.md  36dbp1rg.md  3d2ymbad.md  45dn6pzp.md  4fhvsmma.md  6zy4rz6p.md  7a0a2txt.md  8bkzbzy5.md  8nahqhg1.md  d8kq9asx.md  fg7vd2gz.md  fs0n5hp2.md  g5038fhj.md  gwzjtt22.md  hqxt0dwn.md  je7pzt7v.md  jzh8b9rv.md  k9h70avb.md  ky4gfdz6.md  m3yrr8t0.md  mzmjcgt2.md  neyc99m7.md  pb58spnn.md  q6nnsd7x.md  r5tbh396.md  s7bsv7kh.md  sda2ycbz.md  vfpfzrkt.md  vfs2brt9.md  vyz6nsmn.md
.tasks/open/: 11v4wzpj.md  137fkdy1.md  3132nkry.md  31n7nrrq.md  36dbp1rg.md  3d2ymbad.md  4fhvsmma.md  6zy4rz6p.md  8nahqhg1.md  8xe6pfvn.md  d8kq9asx.md  fs0n5hp2.md  gwzjtt22.md  je7pzt7v.md  jzh8b9rv.md  k9h70avb.md  ky4gfdz6.md  m3yrr8t0.md  mvpv94hq.md  n3zk1p19.md  pb58spnn.md  q6nnsd7x.md  qhd3p5cd.md  r5tbh396.md  sda2ycbz.md  t1sa6sdj.md  vfpfzrkt.md  vfs2brt9.md  xjgsxmrf.md
demo/: cowsay.tape  input.tape
doc/: bdsh-extra.md  bdsh.1
src/: cli.rs  colors.rs  hosts.rs  main.rs  tmux.rs  watch.rs
src/watch/: consensus.rs  help_bar.rs  mod.rs  status_bar.rs
tests/: generate_man.rs  ssh_test.rs  watch_test.rs
tests/common/: mod.rs
