[package]
name = "bdsh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
crossterm = "0.28"
indexmap = "2"
names = { version = "0.14.0", default-features = false }
notify = "8.2.0"
ratatui = "0.29"
similar = "2.7.0"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
