[package]
name = "bdsh"
version = "0.2.16"
edition = "2021"
description = "Run commands on multiple hosts simultaneously via SSH with consensus output view"
license = "Apache-2.0"
repository = "https://github.com/brianm/bdsh"
homepage = "https://github.com/brianm/bdsh"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
crossterm = "0.28"
indexmap = "2"
names = { version = "0.14.0", default-features = false }
notify = "8.2.0"
ratatui = "0.30"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"

[build-dependencies]
clap = { version = "4.5.13", features = ["derive"] }
clap_mangen = "0.2"
mandown = "1"

